--- a/v-2/index.html
+++ b/v-2/index.html
@@ -7,7 +7,7 @@
   <style>
     :root{--bg:#f3f6fb}
     html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial,sans-serif}
-    .app{height:100vh;display:flex}
+    .app{height:100vh;display:flex;touch-action:none;}
 
     /* Sidebar */
     .sidebar{width:60px;background:#fff;border-right:1px solid #e6e9ef;display:flex;flex-direction:column;align-items:center;padding:8px 0;gap:10px}
@@ -25,6 +25,7 @@
       box-shadow:0 8px 20px rgba(16,24,40,0.08);
       user-select:text;cursor:grab;transform-origin:left top;
       display:flex;flex-direction:column;gap:8px;overflow:auto;resize: both;
+      touch-action:none;
     }
     .note:active{cursor:grabbing}
     .note .header{display:flex;justify-content:space-between;align-items:center}
@@ -36,7 +37,6 @@
     /* selection */
     .note.selected{box-shadow:0 10px 28px rgba(37,99,235,0.18);border:2px solid rgba(37,99,235,0.85)}
     .marquee{position:absolute;border:2px dashed rgba(34,34,34,0.25);background:rgba(37,99,235,0.06);pointer-events:none}
-
   </style>
 </head>
 <body>
@@ -51,13 +51,12 @@
   <script>
     (function(){
       const board = document.getElementById('board');
-      const boardRect = board.getBoundingClientRect();
 
       const stickyTool = document.getElementById('tool-sticky');
       const selectTool = document.getElementById('tool-select');
       let currentTool = 'sticky';
 
-      let notes = new Map(); // id -> element
+      let notes = new Map();
       let idCounter = 1;
       let selected = new Set();
 
@@ -80,7 +79,6 @@
         const el = document.createElement('div');
         el.className = 'note '+color;
         el.style.left = x+'px'; el.style.top = y+'px';
-        // el.style.width = '180px';
         el.setAttribute('data-id', id);
         el.innerHTML = `
           <div class="header" style="font-weight:600;font-size:13px">Sticky</div>
@@ -120,7 +118,7 @@
         }
       }
 
-      // note drag / group drag
+      // note drag
       let dragging = null;
 
       function notePointerDown(e){
@@ -168,10 +166,7 @@
           }
         } else if(currentTool==='select'){
           if(e.target===board){
-            const currentX = e.clientX 
-const currentY = e.clientY 
-
-            marqueeStart = {x: currentX, y: currentY};
+            marqueeStart = {x: e.clientX, y: e.clientY};
             marquee = document.createElement('div');
             marquee.className = 'marquee';
             marquee.style.left = marqueeStart.x - board.getBoundingClientRect().left + 'px';
