--- a/v-5/index.html
+++ b/v-5/index.html
@@ -40,13 +40,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="js/state.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/history.js"></script>
-  <script src="js/drawing.js"></script>
-  <script src="js/notes.js"></script>
-  <script src="js/connectors.js"></script>
-  <script src="js/interaction.js"></script>
-  <script src="js/index.js"></script>
+  
+  <script type="module" src="js/index.js"></script>
 </body>
 </html>
