--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <div class="app">
     <div class="sidebar" role="toolbar" aria-label="Tools">
       <div>
-        <button id="tool-sticky" class="tool-btn active" title="Sticky Note">📝</button>
+        <button id="tool-sticky" class="tool-btn " title="Sticky Note">📝</button>
         <div class="tool-label">Sticky</div>
       </div>
       <div>
-        <button id="tool-select" class="tool-btn" title="Select">🔲</button>
+        <button id="tool-select" class="tool-btn active" title="Select">🔲</button>
         <div class="tool-label">Select</div>
       </div>
       <div>
