new intersction file content

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
     <div class="toolbar-bottom-wrapper">
       <div class="toolbar-bottom"
            id="bottomBar">
-        <div class="chip"
-             id="undoBtn">Undo (Ctrl+Z)</div>
-        <div class="chip"
-             id="redoBtn">Redo (Ctrl+Y)</div>
-        <div class="chip"
-             id="snapToggle">Snap: ON</div>
-        <div class="chip"
-             id="gridToggle">Grid: ON</div>
+        <button class="chip"
+             id="undoBtn">Undo (Ctrl+Z)</button>
+        <button class="chip"
+             id="redoBtn">Redo (Ctrl+Y)</button>
+        <button class="chip toggle-on"
+             id="snapToggle">Snap: ON</button>
+        <button class="chip toggle-on"
+             id="gridToggle">Grid: ON</button>
         <!-- <div style="margin-left:8px;color:#666;font-size:12px">
           Pan: Space+Drag / Middle mouse or two-finger
         </div> -->
