zooming with mouse wheel

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 
         </button>
 
-        <button class="chip tooltip toggle-on"
-                data-tooltip="Snap: On"
+        <button class="chip tooltip"
+                data-tooltip="Snap: Off"
                 data-tooltip-pos="top"
                 id="snapToggle">
 
