clean everything added

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="toolbar-wrapper">
       <div class="toolbar-bottom"
            id="bottomBar">
-        <button class="chip tooltip"
+        <button class="chip tooltip toggle-on"
                 data-tooltip="Clean"
                 data-tooltip-pos="top"
                 id="cleanBtn">
