naming board a added

--- a/index.html
+++ b/index.html
@@ -179,6 +179,15 @@
     <header class="header-toolbar-wrapper">
       <div class="header-toolbar"
            id="bottomBar">
+
+        <div>
+          <small id="name"></small>
+          <input type="text"
+                 name=""
+                 id="name-input"
+                 value="" />
+        </div>
+
         <button class="header-chip tooltip toggle-on"
                 data-tooltip="Zoom In"
                 data-tooltip-pos="bottom"
