--- a/prototype/index.html
+++ b/prototype/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport"
         content="width=device-width,initial-scale=1" />
-  <title>Apricity</title>
+  <title>Prink 1.0</title>
   <link rel="stylesheet"
         href="css/index.css" />
 
