added repo name

--- a/public/404.html
+++ b/public/404.html
@@ -12,12 +12,12 @@
       sessionStorage.redirect = redirectTo;
 
       // Redirect to the app root (index.html)
-      window.location.replace("/");
+      window.location.replace("/prink-prototype-version-2/");
     </script>
   </head>
   <body>
     <noscript>
-      <meta http-equiv="refresh" content="0; url=/" />
+      <meta http-equiv="refresh" content="0; url=/prink-prototype-version-2/" />
     </noscript>
   </body>
 </html>
