removed redirect from 404

--- a/public/404.html
+++ b/public/404.html
@@ -12,7 +12,7 @@
       sessionStorage.redirect = redirectTo;
 
       // Redirect to the app root (index.html)
-      window.location.replace("/prink-prototype-version-2/");
+      // window.location.replace("/prink-prototype-version-2/");
     </script>
   </head>
   <body>
