--- a/public/404.html
+++ b/public/404.html
@@ -11,8 +11,9 @@
       // Store it temporarily
       sessionStorage.redirect = redirectTo;
 
+      console.log({redirectTo});
       // Redirect to the app root (index.html)
-      // window.location.replace("/prink-prototype-version-2/");
+      window.location.replace("/prink-prototype-version-2/" + window.location.search + window.location.hash);
     </script>
   </head>
   <body>
