added redirect to

--- a/public/404.html
+++ b/public/404.html
@@ -13,7 +13,7 @@
 
       console.log({redirectTo});
       // Redirect to the app root (index.html)
-      window.location.replace("/prink-prototype-version-2/" + window.location.search + window.location.hash);
+      window.location.replace(redirectTo);
     </script>
   </head>
   <body>
