--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <noscript>
-      <meta http-equiv="refresh" content="0; url=/prink-prototype-version-2/" />
+      <!-- <meta http-equiv="refresh" content="0; url=/prink-prototype-version-2/" /> -->
     </noscript>
   </body>
 </html>
