--- a/public/404.html
+++ b/public/404.html
@@ -15,7 +15,7 @@
     console.log({ redirectTo, pathname });
 
     // Redirect to the app root (index.html)
-    window.location.replace(pathname);
+    window.location.replace('/prink-prototype-version-2/');
   </script>
 </head>
 
