--- a/public/404.html
+++ b/public/404.html
@@ -7,12 +7,13 @@
   <script>
     // Save the current path, query, and hash (e.g. /canvas/123?x=1#section)
     const pathname = window.location.pathname
+    const basepath = window.location.origin;
     const redirectTo = pathname + window.location.search + window.location.hash;
 
     // Store it temporarily
     sessionStorage.redirect = redirectTo;
 
-    console.log({ redirectTo, pathname });
+    console.log({ redirectTo, pathname, basepath });
 
     // Redirect to the app root (index.html)
     window.location.replace('/prink-prototype-version-2/');
