--- a/public/404.html
+++ b/public/404.html
@@ -5,36 +5,16 @@
   <meta charset="UTF-8" />
   <title>Redirecting...</title>
   <script>
-    // Save the current path, query, and hash (e.g. /canvas/123?x=1#section)
+    // Save the current path, query, and hash (e.g. /prink-prototype-version-2/canvas/123?x=1#section)
     const pathname = window.location.pathname
-    const origin = window.location.origin;
-    const port = window.location.port
-    const hostname = window.location.hostname
-    const protocol = window.location.protocol
-    const href = window.location.href
-    const ancestorOrigins = window.location.ancestorOrigins
     const redirectTo = pathname + window.location.search + window.location.hash;
 
-    // Store it temporarily
-    sessionStorage.redirect = redirectTo;
-
-    console.log({ 
-      pathname,
-      origin,
-      port,
-      hostname,
-  
-    });
-
-    console.log({
-      protocol,
-      href,
-      redirectTo,
-      ancestorOrigins,
-    })
+    // Store it temporarily so main.tsx can restore it
+    sessionStorage.setItem('redirect', redirectTo);
 
     // Redirect to the app root (index.html)
-    window.location.replace(  '/prink-prototype-version-2/');
+    // The base path must match vite.config.ts base setting
+    window.location.replace('/prink-prototype-version-2/');
   </script>
 </head>
 
